# automate

./: .gitignore  Cargo.toml  README.md  file.auto  test.auto
.github/workflows/: rust.yml
src/: app.rs  keyframe.rs  lib.rs  main.rs  sequencer.rs  settings.rs  util.rs
