[package]
name = "automate"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.27.0"
egui_extras = { features = ["default"] }
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rdev ={ version= "0.5.3", features =["serialize"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
rfd = "0.14.1"
uuid = { version = "1.9.1", features =["v4"]}

env_logger = "0.11.3"

[profile.dev.package."*"]
opt-level = 2
