[package]
name = "automate"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# UI
egui = { git = "https://github.com/addiswebb/egui", branch = "set-hovered-table-rows" }
egui_extras = { git = "https://github.com/addiswebb/egui", branch = "set-hovered-table-rows", features = [
    "default",
    "file",
    "image",
] }
eframe = { git = "https://github.com/addiswebb/egui", branch = "set-hovered-table-rows", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rdev = { version = "0.5.3", features = [
    "serialize",
] } # For recording and simulating user input
# Saving
serde = { version = "1", features = ["derive"] } # For save and loading data
serde_json = "1.0.117"
rfd = "0.14.1" # Cross platform file dialog
uuid = { version = "1.9.1", features = [
    "v4",
] } # For keeping track of individual keyframes

# Logging
log = "0.4"
env_logger = "0.11.3"

# Images 
xcap = "0.0.10"
image = "0.25.1"
# fs_extra = "1.3.0"
# find-subimage = "0.1.12" # Image in image search
# dify = "0.6.0"           # Image comparison

[profile.dev.package."*"]
opt-level = 2
